--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,14 @@ node_modules
 dist/
 phpMyAdmin/
 node-template/
+
+package-lock.json
+yarn.lock
+.DS_Store
+Thumbs.db
+db.json
+*.log
+public/
+node_modules/
+.deploy*/
+out/
