--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "serve": "nodemon index.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.5",
     "express": "^4.19.1",
     "express-jsdoc-swagger": "^1.8.0",
     "generic-pool": "^3.9.0",
+    "jsonwebtoken": "^9.0.2",
     "log4js": "^6.9.1",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
