--- a/package.json
+++ b/package.json
@@ -9,23 +9,23 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.2",
-    "cookie-parser": "^1.4.6",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.1",
+    "bcrypt": "^6.0.0",
+    "body-parser": "^2.2.0",
+    "cookie-parser": "^1.4.7",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
     "express-jsdoc-swagger": "^1.8.0",
     "generic-pool": "^3.9.0",
     "jsonwebtoken": "^9.0.2",
     "log4js": "^6.9.1",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^2.0.2",
     "mysql": "^2.18.1",
-    "nodemon": "^3.1.0",
-    "sqlite": "^5.1.1",
+    "nodemon": "^3.1.10",
     "sqlite3": "^5.1.7",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0",
-    "uuid": "^9.0.1",
-    "ws": "^8.16.0"
+    "swagger-ui-express": "^5.0.1",
+    "uuid": "^11.1.0",
+    "windows-build-tools": "^5.2.2",
+    "ws": "^8.18.3"
   }
 }
